# filehandler-lib

./: CREADME.md  README.md
Chandler/Insertline/: insert.c
Cpphandler/: CMakeLists.txt  buildfile.sh  filehandler.h  main.cpp
Cpphandler/Insertline/: insert.cpp
GoogleTest/: gooltest.md  sample1.cc  sample1.h  sample1_unittest.cc
Pythonhandler/Insertline/: insert.py
Shellhandler/Insertline/: insertafter.sh  insertbefore.sh  your_file.txt
